[package]
name = "boc_usd_cad"
version = "0.3.0"
authors = ["Jessica Rodriguez <dev@jessicarod.com>"]
edition = "2024"
include = ["src/**", "Cargo.toml", ".gitignore", "LICENSE", "NOTICE"]
license = "Apache-2.0"
repository = "https://github.com/jessicarod7/boc_usd_cad"
description = "USD/CAD exchange rates from the Bank of Canada (for ACB calculations)"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
jiff = { version = "0.2.15", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde-str"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.12", features = ["json"] }
